Fixes #9794 - Jetty 12 - jetty-ee9-proxy.xml broken.
Fixed both ee9-proxy and ee10-proxy that were not working at all.
Expanded the module properties to cover all the configuration parameters of ProxyServlet.
Added distribution test cases.
Added documentation.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>